Lines and Predictions

--- a/analytics/college-football-predictions.ipynb
+++ b/analytics/college-football-predictions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 77,
    "id": "9e481666",
    "metadata": {},
    "outputs": [],
@@ -22,12 +22,12 @@
     "import pandas as pd\n",
     "\n",
     "year = 2025\n",
-    "week = 4"
+    "week = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 78,
    "id": "e35fc03d",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "id": "8cdf2541",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 80,
    "id": "fa607154",
    "metadata": {},
    "outputs": [
@@ -88,74 +88,74 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Charlotte</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>15.05</td>\n",
-       "      <td>24.70</td>\n",
-       "      <td>-9.65</td>\n",
+       "      <td>5</td>\n",
+       "      <td>East Carolina</td>\n",
+       "      <td>Army</td>\n",
+       "      <td>30.55</td>\n",
+       "      <td>29.65</td>\n",
+       "      <td>0.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Oklahoma State</td>\n",
-       "      <td>Tulsa</td>\n",
-       "      <td>21.98</td>\n",
-       "      <td>20.23</td>\n",
-       "      <td>1.75</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>Florida State</td>\n",
+       "      <td>30.54</td>\n",
+       "      <td>28.94</td>\n",
+       "      <td>1.60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Rutgers</td>\n",
-       "      <td>Iowa</td>\n",
-       "      <td>27.14</td>\n",
-       "      <td>33.95</td>\n",
-       "      <td>-6.81</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Arizona State</td>\n",
+       "      <td>TCU</td>\n",
+       "      <td>30.86</td>\n",
+       "      <td>26.93</td>\n",
+       "      <td>3.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Miami (OH)</td>\n",
-       "      <td>UNLV</td>\n",
-       "      <td>33.49</td>\n",
-       "      <td>37.81</td>\n",
-       "      <td>-4.32</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Oregon State</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>19.85</td>\n",
+       "      <td>29.25</td>\n",
+       "      <td>-9.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Louisville</td>\n",
-       "      <td>Bowling Green</td>\n",
-       "      <td>35.53</td>\n",
-       "      <td>14.11</td>\n",
-       "      <td>21.42</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>USC</td>\n",
+       "      <td>24.73</td>\n",
+       "      <td>32.31</td>\n",
+       "      <td>-7.58</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   season  week        homeTeam       awayTeam  pred_homePoints  \\\n",
-       "0    2025     4       Charlotte           Rice            15.05   \n",
-       "1    2025     4  Oklahoma State          Tulsa            21.98   \n",
-       "2    2025     4         Rutgers           Iowa            27.14   \n",
-       "3    2025     4      Miami (OH)           UNLV            33.49   \n",
-       "4    2025     4      Louisville  Bowling Green            35.53   \n",
+       "   season  week       homeTeam       awayTeam  pred_homePoints  \\\n",
+       "0    2025     5  East Carolina           Army            30.55   \n",
+       "1    2025     5       Virginia  Florida State            30.54   \n",
+       "2    2025     5  Arizona State            TCU            30.86   \n",
+       "3    2025     5   Oregon State        Houston            19.85   \n",
+       "4    2025     5       Illinois            USC            24.73   \n",
        "\n",
        "   pred_awayPoints  pred_pointDiff  \n",
-       "0            24.70           -9.65  \n",
-       "1            20.23            1.75  \n",
-       "2            33.95           -6.81  \n",
-       "3            37.81           -4.32  \n",
-       "4            14.11           21.42  "
+       "0            29.65            0.90  \n",
+       "1            28.94            1.60  \n",
+       "2            26.93            3.93  \n",
+       "3            29.25           -9.40  \n",
+       "4            32.31           -7.58  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 81,
    "id": "2b75b1fd",
    "metadata": {},
    "outputs": [
@@ -227,8 +227,8 @@
        "      <th>pred_pointDiff</th>\n",
        "      <th>startDate</th>\n",
        "      <th>homeTeamId</th>\n",
-       "      <th>homeScore</th>\n",
        "      <th>awayTeamId</th>\n",
+       "      <th>homeScore</th>\n",
        "      <th>awayScore</th>\n",
        "      <th>spread</th>\n",
        "      <th>formatted_spread</th>\n",
@@ -242,143 +242,143 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Charlotte</td>\n",
-       "      <td>Rice</td>\n",
-       "      <td>15.05</td>\n",
-       "      <td>24.70</td>\n",
-       "      <td>-9.65</td>\n",
-       "      <td>2025-09-18 23:30:00+00:00</td>\n",
-       "      <td>2429</td>\n",
-       "      <td>17</td>\n",
-       "      <td>242</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>Rice -1.5</td>\n",
-       "      <td>42.5</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>-122.0</td>\n",
-       "      <td>-11.15</td>\n",
+       "      <td>5</td>\n",
+       "      <td>East Carolina</td>\n",
+       "      <td>Army</td>\n",
+       "      <td>30.55</td>\n",
+       "      <td>29.65</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>2025-09-25 23:30:00+00:00</td>\n",
+       "      <td>151</td>\n",
+       "      <td>349</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>-3.5</td>\n",
+       "      <td>East Carolina -3.5</td>\n",
+       "      <td>52.5</td>\n",
+       "      <td>-175.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>4.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Oklahoma State</td>\n",
-       "      <td>Tulsa</td>\n",
-       "      <td>21.98</td>\n",
-       "      <td>20.23</td>\n",
-       "      <td>1.75</td>\n",
-       "      <td>2025-09-19 23:30:00+00:00</td>\n",
-       "      <td>197</td>\n",
-       "      <td>12</td>\n",
-       "      <td>202</td>\n",
-       "      <td>19</td>\n",
-       "      <td>-10.0</td>\n",
-       "      <td>Oklahoma State -10</td>\n",
-       "      <td>54.5</td>\n",
-       "      <td>-375.0</td>\n",
-       "      <td>295.0</td>\n",
-       "      <td>11.75</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>Florida State</td>\n",
+       "      <td>30.54</td>\n",
+       "      <td>28.94</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>2025-09-26 23:00:00+00:00</td>\n",
+       "      <td>258</td>\n",
+       "      <td>52</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>Florida State -7</td>\n",
+       "      <td>60.5</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>-278.0</td>\n",
+       "      <td>-5.40</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Rutgers</td>\n",
-       "      <td>Iowa</td>\n",
-       "      <td>27.14</td>\n",
-       "      <td>33.95</td>\n",
-       "      <td>-6.81</td>\n",
-       "      <td>2025-09-20 00:00:00+00:00</td>\n",
-       "      <td>164</td>\n",
-       "      <td>28</td>\n",
-       "      <td>2294</td>\n",
-       "      <td>38</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>Iowa -2.5</td>\n",
-       "      <td>46.5</td>\n",
-       "      <td>110.0</td>\n",
-       "      <td>-130.0</td>\n",
-       "      <td>-9.31</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Arizona State</td>\n",
+       "      <td>TCU</td>\n",
+       "      <td>30.86</td>\n",
+       "      <td>26.93</td>\n",
+       "      <td>3.93</td>\n",
+       "      <td>2025-09-27 01:00:00+00:00</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2628</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>Arizona State -3</td>\n",
+       "      <td>54.5</td>\n",
+       "      <td>-162.0</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>6.93</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Miami (OH)</td>\n",
-       "      <td>UNLV</td>\n",
-       "      <td>33.49</td>\n",
-       "      <td>37.81</td>\n",
-       "      <td>-4.32</td>\n",
-       "      <td>2025-09-20 16:00:00+00:00</td>\n",
-       "      <td>193</td>\n",
-       "      <td>38</td>\n",
-       "      <td>2439</td>\n",
-       "      <td>41</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>UNLV -2.5</td>\n",
-       "      <td>49.5</td>\n",
-       "      <td>110.0</td>\n",
-       "      <td>-130.0</td>\n",
-       "      <td>-6.82</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Oregon State</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>19.85</td>\n",
+       "      <td>29.25</td>\n",
+       "      <td>-9.40</td>\n",
+       "      <td>2025-09-27 02:30:00+00:00</td>\n",
+       "      <td>204</td>\n",
+       "      <td>248</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13.5</td>\n",
+       "      <td>Houston -13.5</td>\n",
+       "      <td>47.5</td>\n",
+       "      <td>390.0</td>\n",
+       "      <td>-520.0</td>\n",
+       "      <td>-22.90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2025</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Louisville</td>\n",
-       "      <td>Bowling Green</td>\n",
-       "      <td>35.53</td>\n",
-       "      <td>14.11</td>\n",
-       "      <td>21.42</td>\n",
-       "      <td>2025-09-20 16:00:00+00:00</td>\n",
-       "      <td>97</td>\n",
-       "      <td>40</td>\n",
-       "      <td>189</td>\n",
-       "      <td>17</td>\n",
-       "      <td>-26.5</td>\n",
-       "      <td>Louisville -26.5</td>\n",
-       "      <td>50.5</td>\n",
-       "      <td>-4000.0</td>\n",
-       "      <td>1600.0</td>\n",
-       "      <td>47.92</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Illinois</td>\n",
+       "      <td>USC</td>\n",
+       "      <td>24.73</td>\n",
+       "      <td>32.31</td>\n",
+       "      <td>-7.58</td>\n",
+       "      <td>2025-09-27 16:00:00+00:00</td>\n",
+       "      <td>356</td>\n",
+       "      <td>30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>USC -7</td>\n",
+       "      <td>60.5</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>-250.0</td>\n",
+       "      <td>-14.58</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   season  week        homeTeam       awayTeam  pred_homePoints  \\\n",
-       "0    2025     4       Charlotte           Rice            15.05   \n",
-       "1    2025     4  Oklahoma State          Tulsa            21.98   \n",
-       "2    2025     4         Rutgers           Iowa            27.14   \n",
-       "3    2025     4      Miami (OH)           UNLV            33.49   \n",
-       "4    2025     4      Louisville  Bowling Green            35.53   \n",
+       "   season  week       homeTeam       awayTeam  pred_homePoints  \\\n",
+       "0    2025     5  East Carolina           Army            30.55   \n",
+       "1    2025     5       Virginia  Florida State            30.54   \n",
+       "2    2025     5  Arizona State            TCU            30.86   \n",
+       "3    2025     5   Oregon State        Houston            19.85   \n",
+       "4    2025     5       Illinois            USC            24.73   \n",
        "\n",
        "   pred_awayPoints  pred_pointDiff                  startDate  homeTeamId  \\\n",
-       "0            24.70           -9.65  2025-09-18 23:30:00+00:00        2429   \n",
-       "1            20.23            1.75  2025-09-19 23:30:00+00:00         197   \n",
-       "2            33.95           -6.81  2025-09-20 00:00:00+00:00         164   \n",
-       "3            37.81           -4.32  2025-09-20 16:00:00+00:00         193   \n",
-       "4            14.11           21.42  2025-09-20 16:00:00+00:00          97   \n",
+       "0            29.65            0.90  2025-09-25 23:30:00+00:00         151   \n",
+       "1            28.94            1.60  2025-09-26 23:00:00+00:00         258   \n",
+       "2            26.93            3.93  2025-09-27 01:00:00+00:00           9   \n",
+       "3            29.25           -9.40  2025-09-27 02:30:00+00:00         204   \n",
+       "4            32.31           -7.58  2025-09-27 16:00:00+00:00         356   \n",
        "\n",
-       "   homeScore  awayTeamId  awayScore  spread    formatted_spread  overUnder  \\\n",
-       "0         17         242         28     1.5           Rice -1.5       42.5   \n",
-       "1         12         202         19   -10.0  Oklahoma State -10       54.5   \n",
-       "2         28        2294         38     2.5           Iowa -2.5       46.5   \n",
-       "3         38        2439         41     2.5           UNLV -2.5       49.5   \n",
-       "4         40         189         17   -26.5    Louisville -26.5       50.5   \n",
+       "   awayTeamId  homeScore  awayScore  spread    formatted_spread  overUnder  \\\n",
+       "0         349       28.0        6.0    -3.5  East Carolina -3.5       52.5   \n",
+       "1          52        NaN        NaN     7.0    Florida State -7       60.5   \n",
+       "2        2628        NaN        NaN    -3.0    Arizona State -3       54.5   \n",
+       "3         248        NaN        NaN    13.5       Houston -13.5       47.5   \n",
+       "4          30        NaN        NaN     7.0              USC -7       60.5   \n",
        "\n",
        "   homeMoneyline  awayMoneyline  line_edge  \n",
-       "0          102.0         -122.0     -11.15  \n",
-       "1         -375.0          295.0      11.75  \n",
-       "2          110.0         -130.0      -9.31  \n",
-       "3          110.0         -130.0      -6.82  \n",
-       "4        -4000.0         1600.0      47.92  "
+       "0         -175.0          145.0       4.40  \n",
+       "1          225.0         -278.0      -5.40  \n",
+       "2         -162.0          136.0       6.93  \n",
+       "3          390.0         -520.0     -22.90  \n",
+       "4          205.0         -250.0     -14.58  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "390565ba",
    "metadata": {},
    "outputs": [],
