--- a/analytics/college-football-predictions.ipynb
+++ b/analytics/college-football-predictions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "id": "9e481666",
    "metadata": {},
    "outputs": [],
@@ -22,12 +22,12 @@
     "import pandas as pd\n",
     "\n",
     "year = 2025\n",
-    "week = 5"
+    "week = 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "id": "e35fc03d",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "id": "8cdf2541",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 24,
    "id": "fa607154",
    "metadata": {},
    "outputs": [
@@ -88,74 +88,74 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2025</td>\n",
-       "      <td>5</td>\n",
-       "      <td>East Carolina</td>\n",
-       "      <td>Army</td>\n",
-       "      <td>30.55</td>\n",
-       "      <td>29.65</td>\n",
-       "      <td>0.90</td>\n",
+       "      <td>6</td>\n",
+       "      <td>New Mexico State</td>\n",
+       "      <td>Sam Houston</td>\n",
+       "      <td>20.49</td>\n",
+       "      <td>18.78</td>\n",
+       "      <td>1.71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2025</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Virginia</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>30.54</td>\n",
-       "      <td>28.94</td>\n",
-       "      <td>1.60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>South Florida</td>\n",
+       "      <td>Charlotte</td>\n",
+       "      <td>34.86</td>\n",
+       "      <td>17.39</td>\n",
+       "      <td>17.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2025</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Arizona State</td>\n",
-       "      <td>TCU</td>\n",
-       "      <td>30.86</td>\n",
-       "      <td>26.93</td>\n",
-       "      <td>3.93</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Delaware</td>\n",
+       "      <td>Western Kentucky</td>\n",
+       "      <td>30.18</td>\n",
+       "      <td>22.60</td>\n",
+       "      <td>7.58</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2025</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Oregon State</td>\n",
-       "      <td>Houston</td>\n",
-       "      <td>19.85</td>\n",
-       "      <td>29.25</td>\n",
-       "      <td>-9.40</td>\n",
+       "      <td>6</td>\n",
+       "      <td>San José State</td>\n",
+       "      <td>New Mexico</td>\n",
+       "      <td>23.93</td>\n",
+       "      <td>24.14</td>\n",
+       "      <td>0.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2025</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>USC</td>\n",
-       "      <td>24.73</td>\n",
-       "      <td>32.31</td>\n",
-       "      <td>-7.58</td>\n",
+       "      <td>6</td>\n",
+       "      <td>BYU</td>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>31.65</td>\n",
+       "      <td>13.75</td>\n",
+       "      <td>17.90</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   season  week       homeTeam       awayTeam  pred_homePoints  \\\n",
-       "0    2025     5  East Carolina           Army            30.55   \n",
-       "1    2025     5       Virginia  Florida State            30.54   \n",
-       "2    2025     5  Arizona State            TCU            30.86   \n",
-       "3    2025     5   Oregon State        Houston            19.85   \n",
-       "4    2025     5       Illinois            USC            24.73   \n",
+       "   season  week          homeTeam          awayTeam  pred_homePoints  \\\n",
+       "0    2025     6  New Mexico State       Sam Houston            20.49   \n",
+       "1    2025     6     South Florida         Charlotte            34.86   \n",
+       "2    2025     6          Delaware  Western Kentucky            30.18   \n",
+       "3    2025     6    San José State        New Mexico            23.93   \n",
+       "4    2025     6               BYU     West Virginia            31.65   \n",
        "\n",
        "   pred_awayPoints  pred_pointDiff  \n",
-       "0            29.65            0.90  \n",
-       "1            28.94            1.60  \n",
-       "2            26.93            3.93  \n",
-       "3            29.25           -9.40  \n",
-       "4            32.31           -7.58  "
+       "0            18.78            1.71  \n",
+       "1            17.39           17.47  \n",
+       "2            22.60            7.58  \n",
+       "3            24.14            0.21  \n",
+       "4            13.75           17.90  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
     "predictions_df = games[matchup_cols].copy()\n",
     "predictions_df['pred_homePoints'] = preds[:, 0]\n",
     "predictions_df['pred_awayPoints'] = preds[:, 1]\n",
-    "predictions_df['pred_pointDiff'] = round(predictions_df['pred_homePoints'] - predictions_df['pred_awayPoints'], 2)\n",
+    "predictions_df['pred_pointDiff'] = abs(round(predictions_df['pred_homePoints'] - predictions_df['pred_awayPoints'], 2))\n",
     "\n",
     "# Save predictions\n",
     "predictions_df.to_csv(f'season{year}_week{week}_predictions.csv', index=False)\n",
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "id": "2b75b1fd",
    "metadata": {},
    "outputs": [
@@ -240,145 +240,145 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2025</td>\n",
-       "      <td>5</td>\n",
-       "      <td>East Carolina</td>\n",
-       "      <td>Army</td>\n",
-       "      <td>30.55</td>\n",
-       "      <td>29.65</td>\n",
-       "      <td>0.90</td>\n",
-       "      <td>2025-09-25 23:30:00+00:00</td>\n",
-       "      <td>151</td>\n",
-       "      <td>349</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>-3.5</td>\n",
-       "      <td>East Carolina -3.5</td>\n",
-       "      <td>52.5</td>\n",
-       "      <td>-175.0</td>\n",
-       "      <td>145.0</td>\n",
-       "      <td>4.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2025</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Virginia</td>\n",
-       "      <td>Florida State</td>\n",
-       "      <td>30.54</td>\n",
-       "      <td>28.94</td>\n",
-       "      <td>1.60</td>\n",
-       "      <td>2025-09-26 23:00:00+00:00</td>\n",
-       "      <td>258</td>\n",
-       "      <td>52</td>\n",
+       "      <td>6</td>\n",
+       "      <td>South Florida</td>\n",
+       "      <td>Charlotte</td>\n",
+       "      <td>34.86</td>\n",
+       "      <td>17.39</td>\n",
+       "      <td>17.47</td>\n",
+       "      <td>2025-10-03 23:00:00+00:00</td>\n",
+       "      <td>58</td>\n",
+       "      <td>2429</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>Florida State -7</td>\n",
-       "      <td>60.5</td>\n",
-       "      <td>225.0</td>\n",
-       "      <td>-278.0</td>\n",
-       "      <td>-5.40</td>\n",
+       "      <td>-27.5</td>\n",
+       "      <td>South Florida -27.5</td>\n",
+       "      <td>55.5</td>\n",
+       "      <td>-5000.0</td>\n",
+       "      <td>1800.0</td>\n",
+       "      <td>-10.03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2025</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Arizona State</td>\n",
-       "      <td>TCU</td>\n",
-       "      <td>30.86</td>\n",
-       "      <td>26.93</td>\n",
-       "      <td>3.93</td>\n",
-       "      <td>2025-09-27 01:00:00+00:00</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2628</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Delaware</td>\n",
+       "      <td>Western Kentucky</td>\n",
+       "      <td>30.18</td>\n",
+       "      <td>22.60</td>\n",
+       "      <td>7.58</td>\n",
+       "      <td>2025-10-03 23:00:00+00:00</td>\n",
+       "      <td>48</td>\n",
+       "      <td>98</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>Arizona State -3</td>\n",
-       "      <td>54.5</td>\n",
-       "      <td>-162.0</td>\n",
-       "      <td>136.0</td>\n",
-       "      <td>6.93</td>\n",
+       "      <td>-2.5</td>\n",
+       "      <td>Delaware -2.5</td>\n",
+       "      <td>62.5</td>\n",
+       "      <td>-142.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>5.08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2025</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Oregon State</td>\n",
-       "      <td>Houston</td>\n",
-       "      <td>19.85</td>\n",
-       "      <td>29.25</td>\n",
-       "      <td>-9.40</td>\n",
-       "      <td>2025-09-27 02:30:00+00:00</td>\n",
-       "      <td>204</td>\n",
-       "      <td>248</td>\n",
+       "      <td>6</td>\n",
+       "      <td>San José State</td>\n",
+       "      <td>New Mexico</td>\n",
+       "      <td>23.93</td>\n",
+       "      <td>24.14</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>2025-10-04 02:00:00+00:00</td>\n",
+       "      <td>23</td>\n",
+       "      <td>167</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>Houston -13.5</td>\n",
-       "      <td>47.5</td>\n",
-       "      <td>390.0</td>\n",
-       "      <td>-520.0</td>\n",
-       "      <td>-22.90</td>\n",
+       "      <td>-2.5</td>\n",
+       "      <td>San José State -2.5</td>\n",
+       "      <td>57.5</td>\n",
+       "      <td>-130.0</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>-2.29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2025</td>\n",
-       "      <td>5</td>\n",
-       "      <td>Illinois</td>\n",
-       "      <td>USC</td>\n",
-       "      <td>24.73</td>\n",
-       "      <td>32.31</td>\n",
-       "      <td>-7.58</td>\n",
-       "      <td>2025-09-27 16:00:00+00:00</td>\n",
-       "      <td>356</td>\n",
-       "      <td>30</td>\n",
+       "      <td>6</td>\n",
+       "      <td>BYU</td>\n",
+       "      <td>West Virginia</td>\n",
+       "      <td>31.65</td>\n",
+       "      <td>13.75</td>\n",
+       "      <td>17.90</td>\n",
+       "      <td>2025-10-04 02:30:00+00:00</td>\n",
+       "      <td>252</td>\n",
+       "      <td>277</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>USC -7</td>\n",
-       "      <td>60.5</td>\n",
-       "      <td>205.0</td>\n",
-       "      <td>-250.0</td>\n",
-       "      <td>-14.58</td>\n",
+       "      <td>-19.5</td>\n",
+       "      <td>BYU -19.5</td>\n",
+       "      <td>47.5</td>\n",
+       "      <td>-1200.0</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>-1.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Michigan</td>\n",
+       "      <td>Wisconsin</td>\n",
+       "      <td>36.35</td>\n",
+       "      <td>15.35</td>\n",
+       "      <td>21.00</td>\n",
+       "      <td>2025-10-04 16:00:00+00:00</td>\n",
+       "      <td>130</td>\n",
+       "      <td>275</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-16.5</td>\n",
+       "      <td>Michigan -16.5</td>\n",
+       "      <td>41.5</td>\n",
+       "      <td>-800.0</td>\n",
+       "      <td>550.0</td>\n",
+       "      <td>4.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   season  week       homeTeam       awayTeam  pred_homePoints  \\\n",
-       "0    2025     5  East Carolina           Army            30.55   \n",
-       "1    2025     5       Virginia  Florida State            30.54   \n",
-       "2    2025     5  Arizona State            TCU            30.86   \n",
-       "3    2025     5   Oregon State        Houston            19.85   \n",
-       "4    2025     5       Illinois            USC            24.73   \n",
+       "   season  week        homeTeam          awayTeam  pred_homePoints  \\\n",
+       "1    2025     6   South Florida         Charlotte            34.86   \n",
+       "2    2025     6        Delaware  Western Kentucky            30.18   \n",
+       "3    2025     6  San José State        New Mexico            23.93   \n",
+       "4    2025     6             BYU     West Virginia            31.65   \n",
+       "6    2025     6        Michigan         Wisconsin            36.35   \n",
        "\n",
        "   pred_awayPoints  pred_pointDiff                  startDate  homeTeamId  \\\n",
-       "0            29.65            0.90  2025-09-25 23:30:00+00:00         151   \n",
-       "1            28.94            1.60  2025-09-26 23:00:00+00:00         258   \n",
-       "2            26.93            3.93  2025-09-27 01:00:00+00:00           9   \n",
-       "3            29.25           -9.40  2025-09-27 02:30:00+00:00         204   \n",
-       "4            32.31           -7.58  2025-09-27 16:00:00+00:00         356   \n",
+       "1            17.39           17.47  2025-10-03 23:00:00+00:00          58   \n",
+       "2            22.60            7.58  2025-10-03 23:00:00+00:00          48   \n",
+       "3            24.14            0.21  2025-10-04 02:00:00+00:00          23   \n",
+       "4            13.75           17.90  2025-10-04 02:30:00+00:00         252   \n",
+       "6            15.35           21.00  2025-10-04 16:00:00+00:00         130   \n",
        "\n",
-       "   awayTeamId  homeScore  awayScore  spread    formatted_spread  overUnder  \\\n",
-       "0         349       28.0        6.0    -3.5  East Carolina -3.5       52.5   \n",
-       "1          52        NaN        NaN     7.0    Florida State -7       60.5   \n",
-       "2        2628        NaN        NaN    -3.0    Arizona State -3       54.5   \n",
-       "3         248        NaN        NaN    13.5       Houston -13.5       47.5   \n",
-       "4          30        NaN        NaN     7.0              USC -7       60.5   \n",
+       "   awayTeamId  homeScore  awayScore  spread     formatted_spread  overUnder  \\\n",
+       "1        2429        NaN        NaN   -27.5  South Florida -27.5       55.5   \n",
+       "2          98        NaN        NaN    -2.5        Delaware -2.5       62.5   \n",
+       "3         167        NaN        NaN    -2.5  San José State -2.5       57.5   \n",
+       "4         277        NaN        NaN   -19.5            BYU -19.5       47.5   \n",
+       "6         275        NaN        NaN   -16.5       Michigan -16.5       41.5   \n",
        "\n",
        "   homeMoneyline  awayMoneyline  line_edge  \n",
-       "0         -175.0          145.0       4.40  \n",
-       "1          225.0         -278.0      -5.40  \n",
-       "2         -162.0          136.0       6.93  \n",
-       "3          390.0         -520.0     -22.90  \n",
-       "4          205.0         -250.0     -14.58  "
+       "1        -5000.0         1800.0     -10.03  \n",
+       "2         -142.0          120.0       5.08  \n",
+       "3         -130.0          110.0      -2.29  \n",
+       "4        -1200.0          750.0      -1.60  \n",
+       "6         -800.0          550.0       4.50  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
     "merged_df = pd.merge(predictions_df, lines_df, left_on=['season', 'week', 'awayTeam', 'homeTeam'], right_on=['season', 'week', 'awayTeam', 'homeTeam'], suffixes=('_pred', '_line'))\n",
     "\n",
     "# Use the new 'spread' column from the updated lines csv\n",
-    "merged_df['line_edge'] = merged_df['pred_pointDiff'] - merged_df['spread']\n",
+    "merged_df['line_edge'] = merged_df['pred_pointDiff'] - abs(merged_df['spread'])\n",
     "\n",
     "# Show potential edges\n",
     "potential_edges = merged_df[abs(merged_df['line_edge']) > 1]\n",
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 26,
    "id": "390565ba",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -429,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
