--- a/analytics/college-football-lines.ipynb
+++ b/analytics/college-football-lines.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "460ac1c7",
    "metadata": {},
    "outputs": [
@@ -35,18 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "id": "38531a83",
    "metadata": {},
    "outputs": [],
    "source": [
     "season = 2025\n",
-    "week = 5"
+    "week = 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "id": "3b567d82",
    "metadata": {},
    "outputs": [],
@@ -78,7 +78,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -92,7 +92,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
