--- a/analytics/college-football.ipynb
+++ b/analytics/college-football.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "995972b4",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "355d13a8",
    "metadata": {},
    "outputs": [],
@@ -53,13 +53,13 @@
     "# Parameters\n",
     "\n",
     "year = 2025\n",
-    "week = 5\n",
+    "week = 6\n",
     "provider = 'DraftKings'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "28a4c2e2",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "70e5bcef",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "fdaba14b",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "id": "eb74278b",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "id": "cdedb96d",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "id": "1d8a59ee",
    "metadata": {},
    "outputs": [
@@ -193,40 +193,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   season  week  homeId       homeTeam       awayTeam  awayId  homePoints  \\\n",
-      "0    2025     5     151  East Carolina           Army     349        28.0   \n",
-      "1    2025     5     258       Virginia  Florida State      52         NaN   \n",
-      "2    2025     5       9  Arizona State            TCU    2628         NaN   \n",
-      "3    2025     5     204   Oregon State        Houston     248         NaN   \n",
-      "4    2025     5     356       Illinois            USC      30         NaN   \n",
+      "   season  week  homeId          homeTeam          awayTeam  awayId  \\\n",
+      "0    2025     6     166  New Mexico State       Sam Houston    2534   \n",
+      "1    2025     6      58     South Florida         Charlotte    2429   \n",
+      "2    2025     6      48          Delaware  Western Kentucky      98   \n",
+      "3    2025     6      23    San José State        New Mexico     167   \n",
+      "4    2025     6     252               BYU     West Virginia     277   \n",
       "\n",
-      "   awayPoints  home_year_x  home_elo  ...  away_year_y  away_epa  \\\n",
-      "0         6.0         2025      1538  ...         2025  0.216947   \n",
-      "1         NaN         2025      1565  ...         2025  0.262982   \n",
-      "2         NaN         2025      1721  ...         2025  0.236800   \n",
-      "3         NaN         2025      1297  ...         2025  0.151041   \n",
-      "4         NaN         2025      1567  ...         2025  0.373025   \n",
+      "  homePoints awayPoints  home_year_x  home_elo  ...  away_year_y  away_epa  \\\n",
+      "0       None       None         2025      1147  ...         2025  0.102115   \n",
+      "1       None       None         2025      1477  ...         2025  0.087163   \n",
+      "2       None       None         2025      1501  ...         2025  0.142712   \n",
+      "3       None       None         2025      1423  ...         2025  0.164913   \n",
+      "4       None       None         2025      1702  ...         2025  0.117322   \n",
       "\n",
       "   away_epaAllowed  away_successRate  away_successRateAllowed  \\\n",
-      "0         0.177844          0.452975                 0.458338   \n",
-      "1         0.116078          0.472059                 0.373303   \n",
-      "2         0.168415          0.449150                 0.401299   \n",
-      "3         0.146870          0.383250                 0.375206   \n",
-      "4         0.116049          0.531181                 0.400356   \n",
+      "0         0.229693          0.363679                 0.458039   \n",
+      "1         0.224620          0.341302                 0.482498   \n",
+      "2         0.197625          0.414477                 0.414238   \n",
+      "3         0.149484          0.431872                 0.405392   \n",
+      "4         0.161949          0.386741                 0.408193   \n",
       "\n",
       "   away_explosiveness  away_explosivenessAllowed  away_year  away_rank  \\\n",
-      "0            0.968576                   0.962333       2025        130   \n",
-      "1            1.047901                   0.948577       2025         19   \n",
-      "2            0.971079                   0.970145       2025         24   \n",
-      "3            1.005758                   0.988781       2025         52   \n",
-      "4            1.007541                   0.951917       2025         14   \n",
+      "0            1.009791                   0.936160       2025        122   \n",
+      "1            0.951967                   0.939590       2025        144   \n",
+      "2            0.944812                   1.030686       2025         96   \n",
+      "3            0.899103                   0.975333       2025        194   \n",
+      "4            0.967008                   0.977512       2025         43   \n",
       "\n",
       "   away_points  \n",
-      "0        77.24  \n",
-      "1       244.11  \n",
-      "2       229.80  \n",
-      "3       198.73  \n",
-      "4       257.02  \n",
+      "0       108.47  \n",
+      "1        38.64  \n",
+      "2       152.76  \n",
+      "3        10.33  \n",
+      "4       205.16  \n",
       "\n",
       "[5 rows x 40 columns]\n"
      ]
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "id": "2a4e2015",
    "metadata": {},
    "outputs": [],
@@ -267,7 +267,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -281,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
