--- a/analytics/college-football.ipynb
+++ b/analytics/college-football.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 352,
    "id": "995972b4",
    "metadata": {},
    "outputs": [
@@ -45,21 +45,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 353,
    "id": "355d13a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Parameters\n",
     "\n",
-    "year = 2025\n",
-    "week = 6\n",
+    "year = 2022\n",
+    "week = 11\n",
     "provider = 'DraftKings'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 354,
    "id": "28a4c2e2",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 355,
    "id": "70e5bcef",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 356,
    "id": "fdaba14b",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 357,
    "id": "eb74278b",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 358,
    "id": "cdedb96d",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 359,
    "id": "1d8a59ee",
    "metadata": {},
    "outputs": [
@@ -193,40 +193,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   season  week  homeId          homeTeam          awayTeam  awayId  \\\n",
-      "0    2025     6     166  New Mexico State       Sam Houston    2534   \n",
-      "1    2025     6      58     South Florida         Charlotte    2429   \n",
-      "2    2025     6      48          Delaware  Western Kentucky      98   \n",
-      "3    2025     6      23    San José State        New Mexico     167   \n",
-      "4    2025     6     252               BYU     West Virginia     277   \n",
+      "   season  week  homeId          homeTeam           awayTeam  awayId  \\\n",
+      "0    2022    11    2006             Akron   Eastern Michigan    2199   \n",
+      "1    2022    11     193        Miami (OH)               Ohio     195   \n",
+      "2    2022    11    2649            Toledo         Ball State    2050   \n",
+      "3    2022    11    2711  Western Michigan  Northern Illinois    2459   \n",
+      "4    2022    11     189     Bowling Green         Kent State    2309   \n",
       "\n",
-      "  homePoints awayPoints  home_year_x  home_elo  ...  away_year_y  away_epa  \\\n",
-      "0       None       None         2025      1147  ...         2025  0.102115   \n",
-      "1       None       None         2025      1477  ...         2025  0.087163   \n",
-      "2       None       None         2025      1501  ...         2025  0.142712   \n",
-      "3       None       None         2025      1423  ...         2025  0.164913   \n",
-      "4       None       None         2025      1702  ...         2025  0.117322   \n",
+      "   homePoints  awayPoints  home_year_x  home_elo  ...  away_year_y  away_epa  \\\n",
+      "0          28          34       2022.0     985.0  ...         2022  0.200166   \n",
+      "1          21          37       2022.0    1374.0  ...         2022  0.193677   \n",
+      "2          28          21       2022.0    1549.0  ...         2022  0.087621   \n",
+      "3          21          24       2022.0    1275.0  ...         2022  0.150027   \n",
+      "4           6          40       2022.0    1096.0  ...         2022  0.157637   \n",
       "\n",
       "   away_epaAllowed  away_successRate  away_successRateAllowed  \\\n",
-      "0         0.229693          0.363679                 0.458039   \n",
-      "1         0.224620          0.341302                 0.482498   \n",
-      "2         0.197625          0.414477                 0.414238   \n",
-      "3         0.149484          0.431872                 0.405392   \n",
-      "4         0.161949          0.386741                 0.408193   \n",
+      "0         0.229852          0.452257                 0.455978   \n",
+      "1         0.233068          0.430223                 0.450630   \n",
+      "2         0.181127          0.383350                 0.444041   \n",
+      "3         0.262101          0.410668                 0.456084   \n",
+      "4         0.212981          0.423898                 0.454604   \n",
       "\n",
       "   away_explosiveness  away_explosivenessAllowed  away_year  away_rank  \\\n",
-      "0            1.009791                   0.936160       2025        122   \n",
-      "1            0.951967                   0.939590       2025        144   \n",
-      "2            0.944812                   1.030686       2025         96   \n",
-      "3            0.899103                   0.975333       2025        194   \n",
-      "4            0.967008                   0.977512       2025         43   \n",
+      "0            0.911472                   0.893678       2022        128   \n",
+      "1            0.916004                   0.986666       2022        132   \n",
+      "2            0.940191                   0.944519       2022         97   \n",
+      "3            0.960970                   0.922859       2022         87   \n",
+      "4            0.957178                   0.932259       2022         90   \n",
       "\n",
       "   away_points  \n",
-      "0       108.47  \n",
-      "1        38.64  \n",
-      "2       152.76  \n",
-      "3        10.33  \n",
-      "4       205.16  \n",
+      "0        77.97  \n",
+      "1        53.67  \n",
+      "2       127.25  \n",
+      "3       142.15  \n",
+      "4       136.64  \n",
       "\n",
       "[5 rows x 40 columns]\n"
      ]
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 360,
    "id": "2a4e2015",
    "metadata": {},
    "outputs": [],
